--- a/gpsdemo/index.html
+++ b/gpsdemo/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<script src="https://raw.github.com/bsnizek/haegerstrand.org/master/hagerstrand.org.js"></script>
 	</head>
